force-app/main/default/objects/FCourse_Detail__c/FCourse_Detail__c.object-meta.xml
<CustomObject>
    <label>FCourse Details</label>
    <nameField>
        <label>FCourse Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FCourse Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>