force-app/main/default/objects/FCourse_Detail__c/fields/F_Student_Amount__c.field-meta.xml
<CustomField>
    <fullName>F_Student_Amount__c</fullName>
    <label>F Student Amount</label>
    <summaryForeignKey>FStudent__c.FCourse_Details__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>