force-app/main/default/objects/FCourse_Detail__c/fields/FBatch_Number__c.field-meta.xml
<CustomField>
    <fullName>FBatch_Number__c</fullName>
    <label>FBatch Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>