force-app/main/default/objects/FCourse_Detail__c/fields/FCourse_Language__c.field-meta.xml
<CustomField>
    <fullName>FCourse_Language__c</fullName>
    <label>FCourse Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Turkish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>