force-app/main/default/objects/FCourse_Detail__c/fields/FCourse_Name__c.field-meta.xml
<CustomField>
    <fullName>FCourse_Name__c</fullName>
    <label>FCourse Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>