force-app/main/default/objects/FCourse_Detail__c/fields/FSchedule_Options__c.field-meta.xml
<CustomField>
    <fullName>FSchedule_Options__c</fullName>
    <label>FSchedule Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DT</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>